# retailpulse-bi-recommender

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt
configs/: settings.yaml
data/: README.md
data/sample/: sample_transactions.csv
demo-app/: index.html  package.json
demo-app/src/: main.js
docs/: architecture.md  data_card.md  demo_script.md  evaluation.md  model_card.md
docs/playwright/: portfolio-media.json  verification-manifest.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/contexts/: I18nContext.tsx
frontend/hooks/: useApi.ts
frontend/lib/: api.ts  export.ts  i18n.ts  journeyStages.ts  paths.ts  tourSteps.ts  utils.ts
frontend/locales/: en.ts  zh-TW.ts
frontend/types/: index.ts
notebooks/: 01_eda.ipynb  02_modeling.ipynb
scripts/: generate_sample.py
src/ab_testing/: experiment.py  stats.py  storage.py
src/analysis/: insights.py
src/api/: main.py  schemas.py
src/app/: streamlit_app.py
src/evaluation/: evaluate_recommender.py
src/features/: cohort.py  product.py  rfm.py
src/ingestion/: loader.py  schema.py
src/models/: market_basket.py  rfm_segmentation.py  tree_models.py
src/preprocessing/: cleaner.py
src/retrieval/: recommender.py
tests/: conftest.py  test_api_health.py  test_data_cleaning.py  test_market_basket.py  test_recommendations.py  test_rfm.py
(+91 files in other folders)
