[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retailpulse-bi-recommender"
version = "0.1.0"
description = "Retail & E-commerce BI + Recommendation Platform — ETL, DuckDB, RFM, cohort, MBA, FastAPI, Streamlit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.0",
    "duckdb>=1.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "mlxtend>=0.23",
    "streamlit>=1.35",
    "plotly>=5.20",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "openpyxl>=3.1",
    # Phase 4 additions
    "statsmodels>=0.14",
    "implicit>=0.7",
    "scipy>=1.13",
    "gensim>=4.3",
    # torch is installed separately via `make install-dl` (CPU wheel)
    # sentence-transformers is installed with torch
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
